--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,7 +1,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import 'tailwindcss';
-
+@import 'remixicon/fonts/remixicon.css';
 
 
 /* Global Styles */
@@ -134,27 +134,31 @@ box-sizing: border-box;
 h1 {
   font-size: 1.875rem; /* text-3xl */
   font-weight: 700;    /* font-bold */
-  color: #1D4ED8;       /* text-blue-700 */
+  color: #172554;       /* text-blue-950 */
   letter-spacing: -0.015em; /* tracking-tight */
 }
 
 h2 {
   font-size: 1.5rem;    /* text-2xl */
   font-weight: 600;     /* font-semibold */
-  color: #1D4ED8;       /* text-blue-700 */
+  color: #172554;       /* text-blue-960 */
 }
 
 h3 {
   font-size: 1.25rem;   /* text-xl */
   font-weight: 500;     /* font-medium */
-  color: #1F2937;       /* text-gray-800 */
+  /* color: #1F2937;    */
+  color: #172554;
+      /* text-gray-800 */
 }
 
-p,span {
+p{
   font-size: 1rem;      /* text-base */
   color: #1F2937;       /* text-gray-800 */
 }
-
+span{
+  font-size: 1rem;
+}
 
 button:hover {
   transform: scale(1.05);
@@ -167,3 +171,18 @@ button:hover {
   scrollbar-width: none;
 }
 
+.Button{
+  background-color: #172554;
+}
+
+.MuiSnackbarContent-message{
+background-color: #f5f5f5;
+color: green;
+font-family: 'Poppins';
+
+}
+.MuiSnackbarContent-root{
+  color: #f5f5f5 !important;
+  background-color: #f5f5f5 !important;
+  padding: 0px;
+}
